feat(comment): implement DeleteComment route
